--- a/core/app/views/ProcureUnits/edit.html
+++ b/core/app/views/ProcureUnits/edit.html
@@ -15,6 +15,7 @@
 #{warning_row ''}
 <h4>采购计划在不同状态修改会有限制</h4>
 <ol>
+  <li>如果该采购计划为父采购计划，则不能修改数量</li>
   <li>计划中: 仓库, 合作伙伴, 价格, 数量, 运输类型, 预计到库时间, 预计交货时间, 预计运输时间, 运输单</li>
   <li>采购中: 仓库, 价格, 数量, 运输类型, 预计到库时间, 预计交货时间, 预计运输时间, 运输单</li>
   <li>完成交货: 预计到库时间, 预计运输时间, 运输单</li>
@@ -31,8 +32,8 @@
         </td>
       </tr>
       <tr>
-        <td colspan="4">
-          <input type="hidden" name="oldPlanQty" value="${oldPlanQty}">
+        <td colspan="6">
+          <input type="hidden" id="oldPlanQty" name="oldPlanQty" value="${oldPlanQty}">
 
           <div class="input-append">
             <input type="text" name="msg" placeholder="简要填写变更的原因">
