--- a/core/app/views/Inbounds/printQuaternionForm.html
+++ b/core/app/views/Inbounds/printQuaternionForm.html
@@ -65,7 +65,7 @@
             <div style="height:10mm;overflow:hidden;">${i.unit?.product?.abbreviation}</div>
           </td>
           <td rowspan="2">${i.unit?.sku}</td>
-          <td rowspan="2">${i.fba?.id}</td>
+          <td rowspan="2">${i.unit?.fba?.id}</td>
           <td rowspan="2">${i.unit?.selling?.fnSku}</td>
           <td rowspan="2">${i.planQty}</td>
           <td rowspan="2">${i.qty}</td>
