--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -143,6 +143,7 @@
         #{elseif unit.selling != null}
           <a class="btn btn-warning btn-block" href="@{Sellings.selling()}/${unit.selling?.sellingId}">
             补全 FnSku
+
           </a>
         #{/elseif}
     </td>
@@ -230,10 +231,10 @@
               #{power.ck "procures.dosplitunit"}
                 <a href="@{ProcureUnits.detail(unit.id)}#${unit?.id}" target="_blank" class="btn btn-small btn-info">变更详情</a>
                   #{if unit.stage == models.procure.ProcureUnit.STAGE.DELIVERY}
-                    <a href="@{ProcureUnits.splitUnit(unit.id)}" class="btn btn-small btn-warning">采购分拆</a>
+                    <a href="@{ProcureUnits.splitUnit(unit.id)}" class="btn btn-small btn-warning" target="_blank">采购分拆</a>
                   #{/if}
                   #{if unit.stage == models.procure.ProcureUnit.STAGE.IN_STORAGE}
-                    <a href="@{ProcureUnits.splitUnit(unit.id)}" class="btn btn-small btn-warning">库存分拆</a>
+                    <a href="@{ProcureUnits.splitUnit(unit.id)}" class="btn btn-small btn-warning" target="_blank">库存分拆</a>
                   #{/if}
               #{/power.ck}
           </div>
