--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -60,17 +60,10 @@
         #{/list}
         </select>
 
-        <select name="p.isPlaced" class="inline">
-          <option value="">是否抵达货代处</option>
-        #{list items:models.view.post.ProcurePost.PLACEDSTATE, as:'t'}
-          <option ${t == p.isPlaced  ? 'selected' : ''} value="${t.name()}">${t.label()}</option>
-        #{/list}
-        </select>
-
-        <select name="p.isOut" class="inline">
-          <option value="">是否出库</option>
-        #{list items:models.procure.ProcureUnit.OST.values(), as:'o'}
-          <option ${o == p.isOut ? 'selected' : ''} value="${o.name()}">${o.label()}</option>
+        <select name="p.isConfirm" class="inline">
+          <option value="">是否核单</option>
+        #{list items:models.view.post.ProcurePost.C, as:'c'}
+          <option ${c == p.isConfirm ? 'selected' : ''} value="${c.name()}">${c.label()}</option>
         #{/list}
         </select>
 
@@ -80,9 +73,17 @@
           <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
         #{/list}
         </select>
+
+        <select name="p.projectName" class="inline">
+          <option value="">项目名称</option>
+        #{list items:models.view.post.ProcurePost.P, as:'n'}
+          <option ${n.name() == p.projectName ? 'selected' : ''} value="${n.name()}">${n.label()}</option>
+        #{/list}
+        </select>
+
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" class="input-medium" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
+          <input type="text" style="width:200px;" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
@@ -140,9 +141,8 @@
     #{/if}
 
     #{if !p.stage || p.stage == models.procure.ProcureUnit.STAGE.DELIVERY}
-
       <div class="input-append">
-        <input type="text" id="name_deliverplan" name="name" value="${name}" placeHolder="出货单的别名(必须)">
+        <input type="text" id="name_deliverplan" name="deliverName" value="${name}" placeHolder="出货单的别名(必须)">
         <button id="create_deliverplan_btn" class="btn btn-primary" data-disable-with='添加中'>
           添加出货单
         </button>
