--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -51,6 +51,20 @@
       #{/list}
       </select>
 
+      <select name="p.shipType" class="inline" style="width:82px;">
+        <option value="">运输方式</option>
+      #{list items:models.procure.Shipment.T.values(), as:'t'}
+        <option ${t == p.shipType ? 'selected' : ''} value="${t.name()}">${t.label()}</option>
+      #{/list}
+      </select>
+
+      <select name="p.projectName" class="inline">
+        <option value="">项目名称</option>
+      #{list items:models.view.post.ProcurePost.P, as:'n'}
+        <option ${n.name() == p.projectName ? 'selected' : ''} value="${n.name()}">${n.label()}</option>
+      #{/list}
+      </select>
+
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
         <input type="text" style="width:200px;" name="p.search" placeholder="出库单ID,采购计划ID,SKU" value="${p.search}">
