--- a/core/app/views/Shipments/_shipment_list.html
+++ b/core/app/views/Shipments/_shipment_list.html
@@ -9,6 +9,7 @@
     <th style="width:10%">去往仓库</th>
     <th style="width:10%">状态</th>
     <th style="width:8%">预计开始时间</th>
+    <th style="width:6%;">实际完成天数</th>
     <th style="width:8%">创建时间</th>
     <th style="width:8%">预计到库时间</th>
     <th style="width:8%">创建者</th>
@@ -34,6 +35,7 @@
     <td>${ship.wname}</td>
     <td style="color:${ship.state.rgb()}">${ship.state.label()}</td>
     <td>#{time_tooltip time:ship.dates.planBeginDate/}</td>
+    <td>${ship.realDay}</td>
     <td>#{time_tooltip time:ship.createDate/}</td>
     <td>#{time_tooltip time:ship.dates.planArrivDate/}</td>
     <td>${ship.uname}</td>
