--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -1,6 +1,10 @@
 #{extends 'main_full.html' /}
 #{set title:"采购单元列表 (${p.count()})"  /}
+#{set 'moreStyles'}
+    #{stylesheet 'bootstrap-multiselect.css'/}
+#{/set}
 #{set 'moreScripts'}
+    #{script 'bootstrap-multiselect.js'/}
     #{script 'component/pagination.coffee'/}
     #{script 'procureunits/index.coffee'/}
     #{script 'procureunits/index.es6'/}
@@ -38,21 +42,22 @@
         #{/list}
         </select>
 
-        <select name="p.stage" class="inline" style="width:82px;">
-          <option value="">阶段</option>
-        #{list items:models.procure.ProcureUnit.STAGE.values(), as:'stage'}
-            #{if stage.name() != 'APPROVE' && stage.name() != 'PLAN'}
-              <option ${stage == p.stage ? 'selected' : ''} value="${stage.name()}">${stage.label()}</option>
-            #{/if}
-        #{/list}
-        </select>
-
         <select name="p.shipType" class="inline" style="width:82px;">
           <option value="">运输方式</option>
         #{list items:models.procure.Shipment.T.values(), as:'t'}
           <option ${t == p.shipType ? 'selected' : ''} value="${t.name()}">${t.label()}</option>
         #{/list}
         </select>
+
+        <div class="input-prepend inline">
+          <select name="p.stages" multiple="multiple" id="stage">
+          #{list items:models.procure.ProcureUnit.STAGE.values(), as:'stage'}
+              #{if stage.name() != 'APPROVE'}
+                <option value="${stage.name()}" ${p.stages.contains(stage) ? 'selected' : ''}>${stage.label()}</option>
+              #{/if}
+          #{/list}
+          </select>
+        </div>
 
         <select name="p.cooperatorId" class="inline selectize" style="width:150px;">
           <option value="">供应商</option>
@@ -131,7 +136,7 @@
                      value="${unit.id}" whouse="${unit.whouse?.name()}"></td>
           <td data-toggle="toggle" data-target="#${tr_key}_${unit.id}" style="cursor:pointer;">
             <i class="icon-reorder"></i>
-            #{if unit.parent}<i class="icon-retweet" title="拆" style="color:red"></i> #{/if}<br>
+              #{if unit.parent}<i class="icon-retweet" title="拆" style="color:red"></i> #{/if}<br>
           ${unit.id}
           </td>
           <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
@@ -341,28 +346,20 @@
 
   <div class="row-fluid">
     <div class="span12">
-    #{if !p.stage || p.stage == models.procure.ProcureUnit.STAGE.PLAN}
-        #{power.ck "procures.createdeliveryment"}
-          <div class="input-append">
-            <input type="text" id="name_input" name="name" value="${name}" placeHolder="采购单的别名(必须)">
-            <button id="create_deliveryment_btn" class="btn btn-primary" data-disable-with='添加中'>
-              添加采购单
-            </button>
-          </div>
-        #{/power.ck}
-    #{/if}
-
-    #{if !p.stage || p.stage == models.procure.ProcureUnit.STAGE.DELIVERY}
-
+    #{power.ck "procures.createdeliveryment"}
+      <div class="input-append">
+        <input type="text" id="name_input" name="name" value="${name}" placeHolder="采购单的别名(必须)">
+        <button id="create_deliveryment_btn" class="btn btn-primary" data-disable-with='添加中'>
+          添加采购单
+        </button>
+      </div>
+    #{/power.ck}
       <div class="input-append">
         <input type="text" id="name_deliverplan" name="name" value="${name}" placeHolder="出货单的别名(必须)">
         <button id="create_deliverplan_btn" class="btn btn-primary" data-disable-with='添加中'>
           添加出货单
         </button>
       </div>
-
-    #{/if}
-
     </div>
   </div>
 </form>
