--- a/core/app/views/ProcureUnits/edit.html
+++ b/core/app/views/ProcureUnits/edit.html
@@ -35,7 +35,7 @@
           <input type="hidden" id="oldPlanQty" name="oldPlanQty" value="${oldPlanQty}">
 
           <div class="input-append">
-            <input type="text" name="msg" placeholder="简要填写变更的原因">
+            <input type="text" name="msg" value="${msg}" placeholder="简要填写变更的原因">
             <button type="submit" class="btn btn-primary" rel="popover" content="当[采购计划的FBA]已生成后再修改[运输方式]或[采购数量]时必须填写原因" placement="right" data-loading>
               更新
             </button>
