--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -124,7 +124,7 @@
     <td>${unit.whouse?.name()}</td>
     <td>${unit.originQty}</td>
     <td #{if unit.attrs.planQty != unit.attrs.qty && (unit.attrs.qty !=0 && unit.attrs.qty)} style="color:red"#{/if}>
-    ${unit.attrs.planQty}/${unit.attrs.qty}/${unit.availableQty}
+    ${unit.attrs.planQty}/${unit.attrs.qty}/${unit.inboundQty}
     </td>
       #{ifnot deliveryplan}
         <td>${unit.attrs.currency?.symbol()} ${unit.attrs.formatPrice().format('#,###.##')}</td>
