库存分拆修改时不需要显示退回父计划tr

--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -163,3 +163,6 @@
     <textarea rows="8" class="span12" name="unit.comment" id="memo">${unit.comment.raw()}</textarea>
   </td>
 </tr>
+
+
+<input type="hidden" id="unit_type" value="${unit.type.name()}">
