--- a/core/app/views/StockRecords/adjustStock.html
+++ b/core/app/views/StockRecords/adjustStock.html
@@ -52,6 +52,7 @@
         <th>调整数量<i class="icon-asterisk" style="color:red"></i></th>
         <td colspan="3">
           <input type="text" name="record.qty" placeholder="请填写 ± 数值" data-max="${unit.availableQty}" required>
+          <span style="color:red"><b> （+ 代表增加库存， - 代表减少库存）</b></span>
         </td>
       </tr>
       <tr>
