--- a/core/app/views/Refunds/_units.html
+++ b/core/app/views/Refunds/_units.html
@@ -19,7 +19,7 @@
     <th style="width:45px;">阶段</th>
   </tr>
 #{list items:units, as:'unit'}
-  <tr class="text-center">
+  <tr class="text-center" id="unit_${unit.id}">
       #{if is_check}
         <td>
           <input type="checkbox" name="ck" value="${unit.id}">
