创建采购计划页面非空判断

--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -165,4 +165,4 @@
 </tr>
 
 
-<input type="hidden" id="unit_type" value="${unit.type.name()}">
+<input type="hidden" id="unit_type" value="${unit.type?.name()}">
