采购计划创建退货单页面js修改

--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -133,7 +133,7 @@
       #{list items:p.query(), as:'unit'}
         <tr>
           <td><input type="checkbox" name="pids" cooperName="${unit.cooperator?.name}" project="${unit.projectName}"
-                     value="${unit.id}" whouse="${unit.whouse?.name()}"></td>
+                     value="${unit.id}" whouse="${unit.whouse?.name()}" stage="${unit.stage?.name()}"></td>
           <td data-toggle="toggle" data-target="#${tr_key}_${unit.id}" style="cursor:pointer;">
             <i class="icon-reorder"></i>
               #{if unit.parent}<i class="icon-retweet" title="拆" style="color:red"></i> #{/if}<br>
