--- a/core/app/views/Refunds/blank.html
+++ b/core/app/views/Refunds/blank.html
@@ -39,7 +39,7 @@
         <th>B2B选项</th>
         <td>
           <label class="checkbox">
-            <input type="checkbox" name="refund.isb2b" value="true"> B2B
+            <input type="checkbox" name="refund.isb2b" value="true" ${proUnit.projectName=='B2B'?'checked':''}> B2B
           </label>
         </td>
       </tr>
